test/sh/error/misc/trivial_type.sk
# TODO: fix semantic layer not checking for trivial types

x: Int = 1

# explicitly cause file to fail so CI passes
y := x + false
